--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode=development --watch"
+    "build": "webpack --mode=development --watch",
+    "test": "jest"
   },
   "dependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "gun": "^0.9.997",
+    "jest": "^23.1.0",
     "webpack": "^4.10.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
+    "regenerator-runtime": "^0.11.1",
     "webpack-cli": "^2.1.4"
   }
 }
