--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
+    "eventemitter": "^0.3.3",
+    "events": "^3.0.0",
     "gun": "^0.9.997",
     "jest": "^23.1.0",
     "webpack": "^4.10.1"
